--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -70,7 +70,7 @@ IF ( APPLE )
 		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_MACX;${DEBUG_DEFINES}"
 		COMPILE_FLAGS -fno-common
 		#LINK_FLAGS "-undefined dynamic_lookup"
-		VERSION ${Nigel_Version}
+		VERSION ${NIGEL_VERSION_STRING}
 	)
 	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 # Windows specifics
@@ -94,19 +94,19 @@ ELSEIF ( WIN32 )
 				${NIGEL_LIBRARY} PROPERTIES
 				COMPILE_FLAGS -msse
 				COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_WIN32;${DEBUG_DEFINES}"
-				VERSION ${Nigel_Version}
+				VERSION ${NIGEL_VERSION_STRING}
 			)
 	ENDIF ( MSVC )
-	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} Kore ${QT_QTCORE_LIBRARY} )
+	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 # Linux specifics
 ELSEIF ( UNIX )
 	SET_TARGET_PROPERTIES ( 
 		${NIGEL_LIBRARY} PROPERTIES
 		COMPILE_FLAGS -msse
 		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_UNIX;${DEBUG_DEFINES}"
-		VERSION ${Nigel_Version}
+		VERSION ${NIGEL_VERSION_STRING}
 	)
-	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} Kore ${QT_QTCORE_LIBRARY} )
+	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 ENDIF ( APPLE )
 
 # Documentation
