Checking for Qt.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,7 +2,10 @@ CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )
 
 PROJECT ( Nigel C CXX )
 
-SET ( Nigel_Version "0.0.1" )
+# -- Qt 4.8.0 minimum --
+FIND_PACKAGE( Qt4 4.8.0 COMPONENTS QtCore REQUIRED )
+# -- Activate proper modules --
+INCLUDE( ${QT_USE_FILE} )
 
 # Kore dependency...
 #IF( NOT KORE_FOUND )
@@ -62,17 +65,17 @@ ENDIF ( MSVC )
 
 # Target library: Nigel
 ADD_LIBRARY ( ${NIGEL_LIBRARY} SHARED ${Nigel_HDRS} ${Nigel_MOC_HDRS} ${Nigel_SRCS} ${Nigel_MOC_SRCS} )
+TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 
 # Mac OS specifics
 IF ( APPLE )
 	SET_TARGET_PROPERTIES ( 
 		${NIGEL_LIBRARY} PROPERTIES
-		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_MACX;${DEBUG_DEFINES}"
+		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${NIGEL_VERSION_STRING}\";_K_MACX;${DEBUG_DEFINES}"
 		COMPILE_FLAGS -fno-common
 		#LINK_FLAGS "-undefined dynamic_lookup"
 		VERSION ${NIGEL_VERSION_STRING}
 	)
-	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 # Windows specifics
 ELSEIF ( WIN32 )
 	# Visual Studio compiler specifics
@@ -82,7 +85,7 @@ ELSEIF ( WIN32 )
 		SOURCE_GROUP ( "Moc Files" FILES ${Nigel_MOC_SRCS} )
 		SET_TARGET_PROPERTIES ( 
 			${NIGEL_LIBRARY} PROPERTIES
-			COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_WIN32;${DEBUG_DEFINES};NIGEL_MSVC"
+			COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${NIGEL_VERSION_STRING}\";_K_WIN32;${DEBUG_DEFINES};NIGEL_MSVC"
 			VERSION ${Nigel_Version}
 		)
 		IF ( CMAKE_CXX_FLAGS MATCHES "/EHsc " )
@@ -91,13 +94,12 @@ ELSEIF ( WIN32 )
 	# Others compilers specifics
 	ELSE ( MSVC )
 		SET_TARGET_PROPERTIES ( 
-				${NIGEL_LIBRARY} PROPERTIES
-				COMPILE_FLAGS -msse
-				COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_WIN32;${DEBUG_DEFINES}"
-				VERSION ${NIGEL_VERSION_STRING}
-			)
+			${NIGEL_LIBRARY} PROPERTIES
+			COMPILE_FLAGS -msse
+			COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${NIGEL_VERSION_STRING}\";_K_WIN32;${DEBUG_DEFINES}"
+			VERSION ${NIGEL_VERSION_STRING}
+		)
 	ENDIF ( MSVC )
-	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 # Linux specifics
 ELSEIF ( UNIX )
 	SET_TARGET_PROPERTIES ( 
@@ -106,7 +108,6 @@ ELSEIF ( UNIX )
 		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_UNIX;${DEBUG_DEFINES}"
 		VERSION ${NIGEL_VERSION_STRING}
 	)
-	TARGET_LINK_LIBRARIES ( ${NIGEL_LIBRARY} ${KORE_LIBRARY} ${QT_QTCORE_LIBRARY} )
 ENDIF ( APPLE )
 
 # Documentation
