Fixing version issues

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -105,7 +105,7 @@ ELSEIF ( UNIX )
 	SET_TARGET_PROPERTIES ( 
 		${NIGEL_LIBRARY} PROPERTIES
 		COMPILE_FLAGS -msse
-		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${Nigel_Version}\";_K_UNIX;${DEBUG_DEFINES}"
+		COMPILE_DEFINITIONS "_K_BUILD_NIGEL;_NIGEL_VERSION=\"${NIGEL_VERSION_STRING}\";_K_UNIX;${DEBUG_DEFINES}"
 		VERSION ${NIGEL_VERSION_STRING}
 	)
 ENDIF ( APPLE )
